Alterações DAO e Front

--- a/ProjetoMatricula/ProjetoMatriculaWeb/ProjetoMatriculaWeb.csproj
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/ProjetoMatriculaWeb.csproj
@@ -120,12 +120,14 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AlunoController.cs" />
+    <Compile Include="Controllers\ControleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewHelper\IViewHelper.cs" />
+    <Compile Include="ViewHelper\VhAluno.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -137,6 +139,9 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\app\create.js" />
+    <Content Include="Scripts\app\details.js" />
+    <Content Include="Scripts\app\edit.js" />
+    <Content Include="Scripts\app\index.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -164,11 +169,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Aluno\Index.cshtml" />
-    <Content Include="Views\Aluno\Details.cshtml" />
-    <Content Include="Views\Aluno\Create.cshtml" />
-    <Content Include="Views\Aluno\Edit.cshtml" />
-    <Content Include="Views\Aluno\Delete.cshtml" />
+    <Content Include="Views\Controle\Index.cshtml" />
+    <Content Include="Views\Controle\Details.cshtml" />
+    <Content Include="Views\Controle\Create.cshtml" />
+    <Content Include="Views\Controle\Edit.cshtml" />
+    <Content Include="Views\Controle\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
