--- a/ProjetoMatricula/ProjetoMatricula/ProjetoMatricula.csproj
+++ b/ProjetoMatricula/ProjetoMatricula/ProjetoMatricula.csproj
@@ -88,8 +88,7 @@
     <Compile Include="Model\TipoDocumento.cs" />
     <Compile Include="Model\TipoEndereco.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DTO\DadosAlunoDTO.cs" />
-    <Compile Include="Servico\AlunoServico.cs" />
+    <Compile Include="DTO\DadosDTO.cs" />
     <Compile Include="Util\Conexao.cs" />
   </ItemGroup>
   <ItemGroup>
