--- a/ProjetoMatricula/ProjetoMatriculaWeb/Web.config
+++ b/ProjetoMatricula/ProjetoMatriculaWeb/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="connectionString" value="Data Source=SINSAON204\SQLEXPRESS;Initial Catalog=master; persist security info=True; Integrated Security=SSPI;"/>
-    <!--<add key="connectionString" value="Data Source=DESKTOP-U5TCS1V\SQL2017;Initial Catalog=engenharia3;User ID=sa;Password=1247042" />-->
+    <!--<add key="connectionString" value="Data Source=SINSAON204\SQLEXPRESS;Initial Catalog=master; persist security info=True; Integrated Security=SSPI;"/>-->
+    <add key="connectionString" value="Data Source=DESKTOP-U5TCS1V\SQL2017;Initial Catalog=engenharia3;User ID=sa;Password=1247042" />
 
   </appSettings>
   <system.web>
