--- a/ProjetoMatricula/ProjetoMatricula/ProjetoMatricula.csproj
+++ b/ProjetoMatricula/ProjetoMatricula/ProjetoMatricula.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\DadosDTO.cs" />
     <Compile Include="Util\Conexao.cs" />
+    <Compile Include="Util\ConvertDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
